# saasprojekti

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  README.md  docker-compose.yml  nginx.conf  package.json  playwright.config.js  pyproject.toml  vitest.config.js
.github/workflows/: ci.yml
backend/: Dockerfile  cache.py  logging_config.py  main.py  metrics.py  requirements-dev.txt  requirements.txt
frontend/: style.css
frontend/src/: animation.js  app.js  layers.js  map.js  renderer.js  ui.js  wfs.js
src/saa_wfs/: __init__.py  main.py  map_viz.py  parser.py  wfs_client.py
tests/: test_animation.js  test_cache.py  test_layers.js  test_main.py  test_map_viz.py  test_metrics.py  test_parser.py  test_renderer.js  test_wfs_client.py
tests/e2e/: map.spec.js
